# STM32L4x-Bootloader

./: .gitignore  CMakeLists.txt  README.md  bin_to_buffer.c  stdout  toolchain.cmake
app/: app.elf  common_include.h  firmware_valid.c  firmware_valid.h  header_tool.c  header_tool.h  linker.ld  main.c  startup.c
bootloader/: bootloader.elf  gpio.c  gpio.h  linker.ld  main.c  main.h  startup.c  usart_protocol.c  usart_protocol.h
shared/: USART.c  USART.h  bootloader_config.h  clock.c  clock.h  common.h  flash.c  flash.h  gpio.c  gpio.h  pc_uart.py
